# pybacktestchain-gui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pybacktestchain_gui/: __init__.py  main.ipynb  pybacktestchain_gui.py  strategies.py  utils.py
tests/: test_pybacktestchain_gui.py
